# bk7231tools

./: .gitignore  LICENSE  Pipfile  README.md  bk7231tools.py  crc.py  package.json  pyproject.toml
.github/workflows/: publish.yml  release.yml
bk7231serial/: __init__.py
bk7231tools/: __init__.py  __main__.py
bk7231tools/analysis/: crc16.py  flash.py  goto.py  kvstorage.py  rbl.py  storage.py  utils.py
bk7231tools/crypto/: code.py  util.py
bk7231tools/serial/: __init__.py  cmd_chip.py  cmd_flash.py  cmd_hl_flash.py  cmd_ll_chip.py  cmd_ll_flash.py  commands.py  legacy.py  linking.py  main.py  packets.py  protocol.py  utils.py
bk7231tools/serial/base/: __init__.py  data.py  enums.py  interface.py  packets.py
